--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -384,6 +384,46 @@ jobs:
           echo "can_merge=true" >> $GITHUB_OUTPUT
         fi
         
+    - name: Create approval review for admin
+      if: steps.check-approval.outputs.approved_by_admin == 'true' && steps.check-approve-command.outputs.approve_command_found == 'true' && steps.check-ci.outputs.ALL_CHECKS_PASSING == 'true'
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        echo "✅ Creating approval review for admin user..."
+        
+        PR_NUMBER=${{ steps.get-pr-number.outputs.pr_number }}
+        
+        # Check if approval review already exists
+        EXISTING_REVIEW=$(gh pr view $PR_NUMBER --json reviews --jq '.reviews[] | select(.state == "APPROVED") | .author.login' | head -1)
+        
+        if [ -n "$EXISTING_REVIEW" ]; then
+          echo "✅ Approval review already exists from: $EXISTING_REVIEW"
+        else
+          # Create approval review using GitHub REST API
+          # This creates a review as the GitHub Actions bot (which has write access)
+          echo "Creating approval review via GitHub API..."
+          
+          REVIEW_RESULT=$(gh api repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews \
+            --method POST \
+            --field event=APPROVE \
+            --field body="Auto-approved via /approve command (admin only)" 2>&1)
+          
+          if [ $? -eq 0 ]; then
+            echo "✅ Approval review created successfully"
+          else
+            echo "⚠️  Could not create approval review: $REVIEW_RESULT"
+            # Try alternative: use gh pr review command
+            if gh pr review $PR_NUMBER --approve --body "Auto-approved via /approve command" 2>&1; then
+              echo "✅ Approval review created via gh CLI"
+            else
+              echo "❌ Failed to create approval review - merge may fail"
+            fi
+          fi
+          
+          # Wait for review to propagate
+          echo "⏳ Waiting for review to propagate..."
+          sleep 5
+        fi
         
     - name: Auto merge if conditions met
       if: steps.check-approval.outputs.approved_by_admin == 'true' && steps.check-approve-command.outputs.approve_command_found == 'true' && steps.check-ci.outputs.ALL_CHECKS_PASSING == 'true' && steps.check-mergeable.outputs.can_merge == 'true'
